--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		<start-class>com.example.possystem.PosSystemApplication</start-class>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -63,6 +64,8 @@
 	</dependencies>
 
 	<build>
+		<sourceDirectory>pos-system/src/main/java</sourceDirectory>
+		<testSourceDirectory>pos-system/src/test/java</testSourceDirectory>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
