--- a/.github/workflows/blackduck-snippet-scan.yml
+++ b/.github/workflows/blackduck-snippet-scan.yml
@@ -133,6 +133,7 @@ jobs:
         with:
           github-token: ${{ env.GH_TOKEN }}
           script: |
+            const fs = require('fs');
             const path = require('path');
             const resultsPath = path.join(process.env.GITHUB_WORKSPACE, 'scan_results.json');
             
