Refine high-risk license families in Black Duck scan results

--- a/.github/workflows/blackduck-snippet-scan.yml
+++ b/.github/workflows/blackduck-snippet-scan.yml
@@ -174,7 +174,7 @@ jobs:
             let comment_body = '### :shield: Black Duck Snippet Scan Results\n\n';
             comment_body += 'The following open source snippets were detected in the added code:\n\n';
             
-            const highRiskFamilies = ['RECIPROCAL', 'AGPL', 'UNKNOWN'];
+            const highRiskFamilies = ['RECIPROCAL', 'AGPL'];
             const mediumRiskFamilies = ['WEAK_RECIPROCAL'];
 
             let table_header = '| Risk | Component | Version | License | License Family |\n';
